v0.3 - July 7, 2011
Changed log formatting, added distance/time/ratio
cleaned up debug messages

v0.2 - July 6, 2011
Several bug fixes
Ant build system

v0.1 - July 5, 2011
Initial code complete dev version for testing