@@ -17,9 +17,11 @@ import org.bukkit.block.BlockState;
 public class LogEvent {
 	public String playerName;
 	public BlockState bs;
+	public long time;
 	
-	public LogEvent(String playerName, BlockState bs) {
+	public LogEvent(String playerName, BlockState bs, long time) {
 		this.playerName = playerName;
 		this.bs = bs;
+		this.time = time;
 	}
 }
