@@ -1,6 +1,6 @@
 name: LogOres
 main: org.morganm.logores.LogOresPlugin
-version: 0.2
+version: 0.3
 author: morganm
 database: false
 commands:
